--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,9 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    // 类型声明
+    "types": ["node","vite/client", "element-plus/global"]
+  }
 }
