--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
     "strict": true,
@@ -24,16 +24,17 @@
       "@/*": ["src/*"]
     },
     // 类型声明
-    "types": ["node","vite/client", "element-plus/global"]
+    "types": ["node","vite/client", "element-plus/global"],
+    "composite": true,
   },
-  "include": [
-    "srcipts",
-    "presets",
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "./vite.config.ts"
-  ],
+  // "include": [
+  //   "srcipts",
+  //   "presets",
+  //   "src/**/*.ts",
+  //   "src/**/*.d.ts",
+  //   "src/**/*.tsx",
+  //   "src/**/*.vue",
+  //   "./vite.config.ts"
+  // ],
   "exclude": ["node_modules", "dist"]
 }
